[package]
name = "r2d2-cryptoki"
version = "0.2.1"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "MIT OR Apache-2.0"
description = "r2d2 adaptor for cryptoki"
repository = "https://github.com/spruceid/r2d2-cryptoki/"
documentation = "https://docs.rs/r2d2-cryptoki/"

[features]
serde = ["cryptoki/serde"]

[dependencies]
cryptoki = "0.6.0"
r2d2 = "0.8.10"

[dev-dependencies]
backoff = "0.4.0"
cached = "0.46.0"
loom = "0.7.1"

[workspace.metadata.release]
sign-tag = true
tag-message = "Release version {{version}}."
pre-release-commit-message = "Release"
